--- a/WebContent/ex6-7.html
+++ b/WebContent/ex6-7.html
@@ -7,24 +7,19 @@
 var colors = ["blue", "black", "red", "green"];
 var size = colors.length;
 
+console.log(size);
 for(var i = 0; i < size; i++){
+	console.log(colors[i]);
 	document.write(
-			"<div style='"	+
-			
-			"width:100px;"	+
-			
-			"height:100px;"	+
-			
-			"background-color:"  + colors[i] + ";"    +
-			
-			"'>" +
-			
-			"</div>" );
-	
+			"<div style='" + 
+				"width: 100px; " + 
+				"height: 100px; " + 
+				"background-color: " + colors[i] + ";'>" + 
+			"</div>"
+	);
 }
 </script>
 </head>
 <body>
-
 </body>
 </html>
