--- a/WebContent/ex6-17.html
+++ b/WebContent/ex6-17.html
@@ -4,16 +4,21 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script>
-var changeText = function(el){
-	el.innerHTML = "Ooops!";
+var onH1Clicked = function(el){
+	console.log('clicked!' + el);
+	console.log(el.innerHtml);
+	
+	// HTML & CSS 조작
+	el.innerHtml = "Clicked!";
+	el.style.backgroundColor = "#f00";
+	el.style.color = "#fff";
 }
 </script>
 </head>
 <body>
-<!--
-<h1 onclick="this.innerHTML='Ooops!';">Click on this text!</h1>
--->
-<h1 onclick="changeText(this)">Click on this text!</h1>
-
+<!-- 
+<h1 onclick="console.log('clicked!');">Click on this text!</h1>
+ -->
+<h1 onclick="onH1Clicked(this);">Click on this text!</h1>
 </body>
 </html>
