--- a/WebContent/ex6-18.html
+++ b/WebContent/ex6-18.html
@@ -3,44 +3,54 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-
 <script type="text/javascript">
+	// var buttonElement = document.getElementById("myBtn");
+	// var el = document.getElementById("myVtn");
+	var displayDate = function() {
+		var buttonElement = document.getElementById("myBtn");
+		buttonElement.onclick = function() {
+			var buttonElement = this;
+			buttonElement.innerText = "<em>clicked</em>";
 
-window.onunload = function(){
-	alert("!");	
-}
+			var now = new Date();
+			var pElement = document.getElementById("demo");
+			pElement.innerHTML = "<em>" + (now.getYear() + 1900) + "년 "
+					+ (now.getMonth() + 1) + "월 " + now.getDate() + "일 "
+					+ now.getHours() + ":" + now.getMinutes() + ":"
+					+ now.getSeconds() + "</em>";
+		}
+	}
 
-function onUnload = function(){
-	alert("진짜 나갈래?");	
-} 
+	var clearDate = function() {
+		var buttonElement = this;
+		buttonElement.innerText = "try it";
 
-function onLoad(){
-	var btn = document.getElementById("myBtn");
-	btn.onclick = displayDate;
-	btn.onmouseover = displayDate;
-	btn.onmouseout = hideDate;	
-}
+		var pElement = document.getElementById("demo");
+		pElement.innerHTML = "";
+	}
 
-function displayDate(){
-   document.getElementById("demo").innerHTML = Date();
-}
-
-function hideDate(){
-   document.getElementById("demo").innerHTML = "";
-}
-
-
+	window.onload = function() {
+		console.log("onunload");
+		var buttonElement = document.getElementById("myBtn");
+		buttonElement.onclick = displayDate;
+		buttonElement.onmouseover = displayDate;
+		buttonElement.onmouseout = clearDate;
+	}
+	
+	// IE에서만 지원
+	window.onunload = function(){
+		alert("onunload");
+	}
 </script>
-
 </head>
+<body>
+	<p>
+		버튼을 클릭하면 <em>displayDate()</em> 함수가 실행 됩니다.
+	</p>
 
-<body onload="onLoad()" onunload="onUnload()">
+	<button id="myBtn">Try it</button>
 
-<p>버튼을 클릭하면  <em>displayDate()</em> 함수가 실행 됩니다.</p>
-
-<button id="myBtn">Try it</button>
-
-<p id="demo"></p>
+	<p id="demo"></p>
 
 </body>
 </html>
