--- a/WebContent/ex6-24.html
+++ b/WebContent/ex6-24.html
@@ -4,27 +4,33 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script type="text/javascript">
-function myFunction() {
-   var x = document.getElementById( "fname" );
-   x.value=x.value.toUpperCase();
+window.onload = function(){
+	var inputElement = document.getElementById("fname");
+	inputElement.onchange = function(){
+		var value = this.value;
+		this.value = value.toUpperCase();
+	}
+	
+	var selectVal = document.getElementById("select-val");
+	selectVal.onchange = function(){
+		var index = this.selectedIndex;
+		console.log(index);
+		console.log(this.options[index].value);
+		console.log(this.options[index].innerText);
+	}
 }
-
-function selectChanged(){
-	alert("!");
-}
-
 </script>
 </head>
 <body>
-<select onchange="selectChanged()">
-	<option>value1</option>
-	<option>value2</option>
-	<option>value3</option>
-	<option>value4</option>
-	<option>value5</option>
+<select id="select-val">
+	<option value="val1">value1</option>
+	<option value="val2">value2</option>
+	<option value="val3">value3</option>
+	<option value="val4">value4</option>
+	<option value="val5">value5</option>
 </select>
 <br>
-아이디 입력: <input type="text" id="fname" onchange="myFunction()">
+아이디 입력: <input type="text" id="fname">
 
 <p>
 	INPUT에 포커스가 없어지면, 이전 값이 변했는 지 판단해서 항상 대문자로 만드는 예제입니다.
